# tsck-electricity-in-the-body

hardware/electricity-in-the-body/: electricity-in-the-body.kicad_prl  electricity-in-the-body.kicad_pro  electricity-in-the-body.kicad_sch
software/tsck-ekg/: CMakeLists.txt  Diablo_Graph.h~  LowPassFilter.test.cpp.unused  Queue.h  RollingMaximum.test.cpp.unused  RollingMaximum.test.cpp~  SignalProcessing.h  SignalProcessing.h~  minunit.h  suites.h  tests.cpp.unused  tsck-ekg.ino  tsck-ekg.ino~
